test/typecheck/pass/function_namespace/v1.sail

val test : bool -> unit

function test _ = ()

val main: unit -> unit

function main _ = {
  let test = true;
  test(test)
}
